--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@prisma/extension-accelerate": "^1.2.1",
+    "@types/pg": "^8.15.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "^15.0.5",
+    "pg": "^8.16.3",
     "prisma": "^7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
