--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/pg": "^8.15.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
     "next": "^15.0.5",
     "pg": "^8.16.3",
