--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@prisma/extension-accelerate": "^1.2.1",
+    "@radix-ui/react-slot": "^1.2.4",
     "@types/pg": "^8.15.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
