--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@prisma/client": "^7.1.0",
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@types/pg": "^8.15.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,12 +40,14 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwind-merge": "^2.6.0",
+    "three": "^0.182.0",
     "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.9",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
+    "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.0",
