--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@types/pg": "^8.15.6",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "groq-sdk": "^0.37.0",
     "isomorphic-dompurify": "^2.33.0",
+    "jose": "^6.1.3",
     "lucide-react": "^0.468.0",
     "next": "^15.0.5",
     "pg": "^8.16.3",
@@ -44,6 +46,7 @@
     "tsx": "^4.21.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.17.9",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
