--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jose": "^6.1.3",
     "lucide-react": "^0.468.0",
     "next": "^15.0.5",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "prisma": "^7.1.0",
     "react": "18.3.1",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.17.9",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@types/three": "^0.182.0",
